--- a/RecipeProject/Domain/Domain.csproj
+++ b/RecipeProject/Domain/Domain.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Reponse\" />
+    <Folder Include="Request\" />
     <Folder Include="Response\" />
     <Folder Include="Request\" />
   </ItemGroup>
